# rust-test

./: Cargo.toml  Dockerfile
src/: main.rs
