[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "=0.3.69"
tracing = "=0.1.37"
tracing-stackdriver = "=0.6.2"
tracing-subscriber = "=0.3.16"
color-eyre = "=0.6.2"
